# phishing-detector

./: README.md  background.js  content.js  manifest.json  popup.html  popup.js  screenshot.js
client/: manifest.json  popup.css  popup.html  popup.js  rest.js  screenshot.js
server/: CMakeLists.txt
server/src/: PhishDatabase.cpp  PhishDatabase.h  PhishDetector.cpp  PhishDetector.h  PictureExtractor.cpp  PictureExtractor.h  PictureExtractor.py  README.md  Share.h  SourceFinder.cpp  SourceFinder.h  WhoIS.cpp  WhoIS.h  client.cpp  crow_all.h  main.cpp  pdutil.h
